# urlnorm

./: Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs  testdata.txt
