[package]
name = "urlnorm"
version = "0.1.1"
edition = "2021"
description = "A URL normalization library for Rust"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/progscrape/urlnorm"
readme = "README.md"

[features]
nightly = []

[dependencies]
url = "2.3"
regex = "1.7"

[dev_dependencies]
rstest = "0"
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
